generator: replace xQueueCreate with xQueueCreateStatic

--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -33,6 +33,8 @@ native_step_pyx_gen = custom_target('native_step_pyx',
                  'ir_writer.pxd',
                  'llvm_basic_optimization.pxd',
                  'llvm_map.pxd',
+                 'replace_syscalls_create.pxd',
+                 'replace_syscalls_create.pxi',
                  'value_analysis_core.pxd',
                  'test.pxd') + common_cython_files],
   command : [cython, '-I', graph_cython_inc, '-I', common_cython_inc, '-I', pyllco_cython_inc, '@INPUT0@', '-o', '@OUTPUT0@'] + cython_flags,
@@ -53,6 +55,7 @@ plib = py3_inst.extension_module('native_step',
         'ir_writer.cpp',
         'llvm_basic_optimization.cpp',
         'llvm_map.cpp',
+        'replace_syscalls_create.cpp',
         'step_manager.cpp',
         'value_analysis_core.cpp',
         'value_analyzer.cpp',
