--- a/ara/steps/native/meson.build
+++ b/ara/steps/native/meson.build
@@ -63,6 +63,7 @@ step_mod = py3_inst.extension_module('step',
   step_pyx_cpp,
   files('step.cpp',
         'option.cpp',
+        'step_manager.cpp',
         'bb_split.cpp',
         'cdummy.cpp',
         'comp_insert.cpp',
@@ -75,11 +76,11 @@ step_mod = py3_inst.extension_module('step',
         'llvm_optimization.cpp',
         'load_freertos_config.cpp',
         'replace_syscalls_create.cpp',
-        'step_manager.cpp',
+        'svf_transformation.cpp',
         'value_analysis_core.cpp',
         'value_analyzer.cpp') + test_sources,
   cpp_pch: 'pch/steps_pch.h',
   depend_files: step_pyx_h,
-  dependencies: [log_dep, py3_inst.dependency(), llvm_dep, graph_dep, common_dep, pyllco_dep]
+  dependencies: [log_dep, py3_inst.dependency(), llvm_dep, graph_dep, common_dep, pyllco_dep, svf_dep]
 )
 
