libs/freertos: move queue decls into header for static initialization

--- a/libs/freertos/full_initialized/meson.build
+++ b/libs/freertos/full_initialized/meson.build
@@ -2,6 +2,7 @@ libs_includes += ['-I', meson.current_source_dir()+'/']
 target_prefix = 'libfreertos_instances_full_initialized'
 src_files = [
   'tasks',
+  'queue',
 ]
 
 obj_targets = []
