--- a/libs/freertos/full_static/meson.build
+++ b/libs/freertos/full_static/meson.build
@@ -4,6 +4,7 @@ src_files = [
 ]
 
 obj_targets = []
+libfreertos_src_files_instances_full_static = []
 foreach src : src_files
   obj_target = custom_target(src,
                              input: src+'.c',
@@ -11,12 +12,14 @@ foreach src : src_files
                              depfile: src+'.dep',
                              command: clang_c+
                                       libs_includes +
-                                      ld_flags +
+                                      freertos_default_config +
                                       obj_flags +
                                       clang_flags)
   obj_targets += obj_target
 
   set_variable('libfreertos_full_static_'+src, obj_target)
+  set_variable('libfreertos_src_full_static_'+src, obj_target)
+  libfreertos_src_files_instances_full_static += files(src+'.c')
 endforeach
 
 obj_targets += libfreertos_vanilla_croutine
@@ -24,6 +27,12 @@ obj_targets += libfreertos_vanilla_event_groups
 obj_targets += libfreertos_vanilla_list
 obj_targets += libfreertos_vanilla_timers
 obj_targets += libfreertos_vanilla_port
+
+libfreertos_src_files_instances_full_static += libfreertos_src_vanilla_croutine
+libfreertos_src_files_instances_full_static += libfreertos_src_vanilla_event_groups
+libfreertos_src_files_instances_full_static += libfreertos_src_vanilla_list
+libfreertos_src_files_instances_full_static += libfreertos_src_vanilla_timers
+libfreertos_src_files_instances_full_static += libfreertos_src_vanilla_port
 
 
 libfreertos_full_static = custom_target('libfreertos_full_static.a',
@@ -33,4 +42,4 @@ libfreertos_full_static = custom_target('libfreertos_full_static.a',
 
 libfreertos_instances_full_static = libfreertos_full_static
 
-ld_flags += ['-Wl,-L' + meson.current_build_dir()]
+# ld_flags += ['-Wl,-L' + meson.current_build_dir()]
