--- a/libs/freertos/vanilla/arm/meson.build
+++ b/libs/freertos/vanilla/arm/meson.build
@@ -1,6 +1,7 @@
 src_files = [
   'port'
 ]
+freertos_src_list += src_files
 
 foreach src : src_files
   obj_target = custom_target(src,
@@ -9,11 +10,15 @@ foreach src : src_files
                              depfile: src+'.dep',
                              command: clang_c+
                                       libs_includes +
+                                      freertos_default_config +
                                       ld_flags +
                                       obj_flags +
                                       clang_flags)
   obj_targets += obj_target
 
   set_variable('libfreertos_vanilla_'+src, obj_target)
+  set_variable('libfreertos_src_vanilla_'+src, files(src+'.c'))
+  libfreertos_src_files_vanilla += files(src+'.c')
+  libfreertos_src_files_passthrough += files(src+'.c')
 endforeach
 
