--- a/libs/include/sra/meson.build
+++ b/libs/include/sra/meson.build
@@ -1,1 +1,2 @@
-libs_includes += ['-I', meson.current_source_dir()]
+libsra_includes =['-I', meson.current_source_dir()]
+  libs_includes += libsra_includes
