--- a/libs/platform/stm32/Drivers/STM32F1xx_HAL_Driver/Src/meson.build
+++ b/libs/platform/stm32/Drivers/STM32F1xx_HAL_Driver/Src/meson.build
@@ -8,6 +8,7 @@ src_files = [
 
 obj_targets = []
 foreach src : src_files
+  lib_platform_src_files += files(src)
   obj_target = custom_target(src,
                              input: src,
                              output: src+'.o',
