--- a/libs/freertos/full_initialized/meson.build
+++ b/libs/freertos/full_initialized/meson.build
@@ -6,6 +6,7 @@ src_files = [
 ]
 
 obj_targets = []
+libfreertos_src_files_instances_full_initialized = []
 foreach src : src_files
   obj_target = custom_target(src,
                              input: src+'.c',
@@ -13,12 +14,13 @@ foreach src : src_files
                              depfile: src+'.dep',
                              command: clang_c+
                                       libs_includes +
-                                      ld_flags +
+                                      freertos_default_config +
                                       obj_flags +
                                       clang_flags)
   obj_targets += obj_target
 
   set_variable(target_prefix + '_' +src, obj_target)
+  libfreertos_src_files_instances_full_initialized += files(src+'.c')
 
 endforeach
 
@@ -28,6 +30,12 @@ obj_targets += libfreertos_vanilla_list
 obj_targets += libfreertos_vanilla_timers
 obj_targets += libfreertos_vanilla_port
 
+libfreertos_src_files_instances_full_initialized += libfreertos_src_vanilla_croutine
+libfreertos_src_files_instances_full_initialized += libfreertos_src_vanilla_event_groups
+libfreertos_src_files_instances_full_initialized += libfreertos_src_vanilla_list
+libfreertos_src_files_instances_full_initialized += libfreertos_src_vanilla_timers
+libfreertos_src_files_instances_full_initialized += libfreertos_src_vanilla_port
+
 
 ar_target = custom_target(target_prefix + '.a',
                           input: obj_targets,
@@ -35,5 +43,3 @@ ar_target = custom_target(target_prefix + '.a',
                           command: ar_cmd)
 
 set_variable(target_prefix, ar_target)
-
-ld_flags += ['-Wl,-L' + meson.current_build_dir()]
