--- a/libs/freertos/vanilla/meson.build
+++ b/libs/freertos/vanilla/meson.build
@@ -7,6 +7,9 @@ src_files = [
   'timers',
   'heap_1',
 ]
+freertos_src_list = src_files
+libfreertos_src_files_vanilla = []
+libfreertos_src_files_passthrough = []
 
 obj_targets = []
 foreach src : src_files
@@ -16,11 +19,16 @@ foreach src : src_files
                              depfile: src+'.dep',
                              command: clang_c+
                                       libs_includes +
+                                      freertos_default_config +
                                       obj_flags +
                                       clang_flags)
   obj_targets += obj_target
 
   set_variable('libfreertos_vanilla_'+src, obj_target)
+  set_variable('libfreertos_src_vanilla_'+src, files(src+'.c'))
+  set_variable('libfreertos_src_passthrough_'+src, files(src+'.c'))
+  libfreertos_src_files_vanilla += files(src+'.c')
+  libfreertos_src_files_passthrough += files(src+'.c')
 endforeach
 
 cpp_src_files = [
@@ -32,6 +40,7 @@ foreach src : cpp_src_files
                              depfile: src+'.cc.dep',
                              command: clang_cpp+
                                       libs_includes +
+                                      freertos_default_config +
                                       obj_flags +
                                       clang_flags)
   obj_targets += obj_target
@@ -50,5 +59,5 @@ libfreertos_vanilla = custom_target('libfreertos_vanilla.a',
                                     input: obj_targets,
                                     output: 'libfreertos_vanilla.a',
                                     command: ar_cmd)
+libfreertos_passthrough = libfreertos_vanilla
 
-ld_flags += ['-Wl,-L' + meson.current_build_dir()]
