--- a/libs/include/freertos/arm/meson.build
+++ b/libs/include/freertos/arm/meson.build
@@ -1,1 +1,3 @@
 libs_includes += ['-I', meson.current_source_dir()]
+freertos_includes += ['-I', meson.current_source_dir()]
+freertos_default_config = ['-I', join_paths(meson.current_source_dir(), 'defaultconfig')]
