--- a/libs/platform/stm32/Drivers/STM32F1xx_HAL_Driver/Inc/meson.build
+++ b/libs/platform/stm32/Drivers/STM32F1xx_HAL_Driver/Inc/meson.build
@@ -1,1 +1,3 @@
 libs_includes += ['-I', meson.current_source_dir()+'/']
+libplatform_includes += ['-I', meson.current_source_dir()]
+subdir('default_conf')
