--- a/appl/meson.build
+++ b/appl/meson.build
@@ -40,6 +40,7 @@ foreach app : ['a',
                'argument_load',
                'c',
                'critical_region_detection',
+               'dead_code',
                'deadlock',
                'dominator',
                'eventgroup',
