steps: rename CFGPreperation -> LLVMOptimization

--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -25,7 +25,6 @@ native_step_pyx_gen = custom_target('native_step_pyx',
                  'option.pxd',
                  'bb_split.pxd',
                  'cdummy.pxd',
-                 'cfg_prep.pxd',
                  'comp_insert.pxd',
                  'cstep.pxd',
                  'fn_single_exit.pxd',
@@ -33,6 +32,7 @@ native_step_pyx_gen = custom_target('native_step_pyx',
                  'ir_reader.pxd',
                  'ir_writer.pxd',
                  'llvm_map.pxd',
+                 'llvm_optimization.pxd',
                  'replace_syscalls_create.pxd',
                  'replace_syscalls_create.pxi',
                  'value_analysis_core.pxd',
@@ -48,13 +48,13 @@ plib = py3_inst.extension_module('native_step',
   files('option.cpp',
         'bb_split.cpp',
         'cdummy.cpp',
-        'cfg_prep.cpp',
         'comp_insert.cpp',
         'fn_single_exit.cpp',
         'icfg.cpp',
         'ir_reader.cpp',
         'ir_writer.cpp',
         'llvm_map.cpp',
+        'llvm_optimization.cpp',
         'replace_syscalls_create.cpp',
         'step_manager.cpp',
         'value_analysis_core.cpp',
