--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -61,6 +61,7 @@ plib = py3_inst.extension_module('native_step',
         'value_analyzer.cpp',
         'test/bb_split_test.cpp',
         'test/comp_insert_test.cpp',
+        'test/cfg_optimize_test.cpp',
         'test/fn_single_exit_test.cpp',
         'test/llvm_map_test.cpp',
         'test/test.cpp'),
